--- a/timeline-2026-public/book.html
+++ b/timeline-2026-public/book.html
@@ -97,7 +97,7 @@ document.addEventListener("DOMContentLoaded", function() {
         }
 
         hideTimelineLoading();
-        window.scrollTo({top: 0, behavior: "instant"});
+        // window.scrollTo({top: 0, behavior: "instant"});
         isLoaded = true;
     }
 });
