--- a/timeline-2026-public/index.html
+++ b/timeline-2026-public/index.html
@@ -165,7 +165,7 @@ if (window.location.href.startsWith("file://")) {
                         <li>
                             小说
                             <ul class="article-list">
-                                <li><a href="javascript: openFile(&quot;https://yhnnd.github.io/timeline-2025/timeline-2025-public/2025.07.22-letter-to-patrick.html&quot;);">兒時事、天工大、獄中夢、書信、诗</a></li>
+                                <li><a href="javascript: openFile(&quot;https://yhnnd.github.io/timeline-2025/timeline-2025-public/2025.07.22-letter-to-patrick.html&quot;);">萬馬踏清(兒時事、天工大、獄中夢、書信、詩)</a></li>
                                 <li><a href="javascript: openFile(&quot;https://yhnnd.github.io/timeline-public/docs/timeline-public/the-phoenix-book-revised.html&quot;);">凤凰古君书新编</a></li>
                                 <li><a href="javascript: openFile(&quot;book-reader.html?fakeUrl=@2024/yhnnd.wordpress.com/20-diary-2024-07-2024-12-出路5/2024.07.20.txt&quot;);">凤凰帝国史 1</a></li>
                                 <li><a href="javascript: openFile(&quot;book-reader.html?fakeUrl=@2024/yhnnd.wordpress.com/20-diary-2024-07-2024-12-出路5/2024.07.22.txt&quot;);">凤凰帝国史 2</a></li>
